restart main process

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build:renderer": "webpack --config ./webpack.renderer.config.js",
         "build": "npm run rebuild && npm run build:renderer && npm run build:main",
         "dev:renderer": "cross-env NODE_ENV=development webpack server --config ./webpack.renderer.config.js",
-        "dev:main": "cross-env NODE_ENV=development npm run build:main && electron dist",
+        "dev:main": "cross-env NODE_ENV=development webpack --config ./webpack.main.config.js --watch",
         "dev": "node ./scripts/dev.js",
         "packager:before": "node ./scripts/before_package.js",
         "packager": "npm run packager:before && npm run build && electron-packager ./dist --win --ia32 --out ./output"
@@ -31,8 +31,10 @@
         "electron": "6.0.0",
         "electron-packager": "^15.2.0",
         "electron-rebuild": "^2.3.5",
+        "electron-reload": "^1.5.0",
         "html-webpack-plugin": "^5.3.1",
         "node-loader": "^2.0.0",
+        "tree-kill": "^1.2.2",
         "ts-loader": "^9.1.2",
         "typescript": "^4.2.4",
         "vue-loader": "^15.9.7",
