--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "author": "Gavin",
     "license": "ISC",
     "dependencies": {
+        "electron-json-storage": "^4.5.0",
+        "fs-extra": "^10.0.0",
         "vue": "^2.6.12",
         "vue-router": "^3.5.1",
         "winax": "^3.1.4"
@@ -28,13 +30,17 @@
         "@types/node": "^15.0.2",
         "copy-webpack-plugin": "^8.1.1",
         "cross-env": "^7.0.3",
+        "css-loader": "^5.2.5",
         "debug": "^4.3.1",
         "electron": "6.0.0",
         "electron-packager": "^15.2.0",
         "electron-rebuild": "^2.3.5",
         "electron-reload": "^1.5.0",
         "html-webpack-plugin": "^5.3.1",
+        "less": "^4.1.1",
+        "less-loader": "^9.0.0",
         "node-loader": "^2.0.0",
+        "style-loader": "^2.0.0",
         "tree-kill": "^1.2.2",
         "ts-loader": "^9.1.2",
         "typescript": "^4.2.4",
