--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
         "electron-json-storage": "^4.5.0",
         "element-ui": "^2.15.1",
         "fs-extra": "^10.0.0",
+        "moment": "^2.29.1",
         "normalize.css": "^8.0.1",
         "vue": "^2.6.12",
         "vue-router": "^3.5.1",
+        "vuex": "^3.6.2",
         "winax": "^3.1.4"
     },
     "devDependencies": {
