--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "author": "Gavin",
     "license": "ISC",
     "dependencies": {
+        "delay": "^5.0.0",
         "electron-json-storage": "^4.5.0",
         "element-ui": "^2.15.1",
         "fs-extra": "^10.0.0",
